--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <header>
+    <header class="image-h">
         <p>Alaska: My travels in a great state</p>
 
     </header>
@@ -19,13 +19,13 @@
         <div class="horizontal"><img src="Alaskaimages/Akentrance.jpg" title="A picture I took as I entered Alaska for the first time"/></div>
         <div class="vertical"><img src="Alaskaimages/ak1.jpg" title="When I was hiking on Turnagain arm" /></div>
         <div class="big"><img src="Alaskaimages/aksalmon.jpg" title="One of the first salmon I spotted in a stream"/></div>
-        <div><img src="Alaskaimages/aksunset.jpg" title="a ray of light shining down on me"/></div>
+        <div class="big"><img src="Alaskaimages/aksunset.jpg" title="a ray of light shining down on me"/></div>
         <div><img src="Alaskaimages/akhealy06.jpg" title="Healy overlook in Denali nation park"/></div>
         <div class="vertical"><img src="Alaskaimages/aksb.jpg" title="the famous spinach break of Talkeetna"/></div>
         <div class='horizontal'><img src="Alaskaimages/akanchorage.jpg"title="A peaceful evening overlooking Anchorage" /></div>
-        <div><img src="Alaskaimages/akabovetree.jpg" title="hiking in the clouds in denali national park"/></div>
-        <div><img src="Alaskaimages/aktalk.jpg" title="Gorgeous clouds by the Talkeetna rail station"/></div>
-        <div><img src="Alaskaimages/aksnowhike.jpg" title="Hiking on curry ridge with deep snow near the peak"/></div>
+        <div class='big'><img src="Alaskaimages/akbus.jpg" title="Me sitting in front of the Into the wild movie bus"/></div>
+        <div class="horizontal"><img src="Alaskaimages/aktalk.jpg" title="Gorgeous clouds by the Talkeetna rail station"/></div>
+        <div class="vertical"><img src="Alaskaimages/aksfsunflower.jpg" title="Alaska state fair sunflower 15 ft tall"/></div>
         <div class="big"><img src="Alaskaimages/akwf2.jpg" title="Alpine flowers growing on a boulder"/></div>
         <div class="vertical"><img src="Alaskaimages/akmtgt.jpg" title="A mountain goat in denali national park"/></div>
         <div class="vertical"><img src="Alaskaimages/akdnp2.jpg"title="beautiful river valley" /></div>
